--- a/.github/workflows/screenshot-and-visitor.yaml
+++ b/.github/workflows/screenshot-and-visitor.yaml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [main, master]
   schedule:
-    - cron: "0 */2 * * *"
+    - cron: '0 */2 * * *'
   workflow_dispatch:
     inputs:
       add_like:
-        description: "Add your like (only one per user allowed)"
+        description: 'Add your like (only one per user allowed)'
         required: false
         default: true
         type: boolean
@@ -19,18 +19,18 @@ permissions:
   actions: read
 
 env:
-  BADGE_STYLE: "for-the-badge"
-  BADGE_COLOR: "brightgreen"
-  LIKES_COLOR: "gold"
-  DATA_DIR: "assets/db"
-  SCREENSHOT_DIR: "assets"
+  BADGE_STYLE: 'for-the-badge'
+  BADGE_COLOR: 'brightgreen'
+  LIKES_COLOR: 'gold'
+  DATA_DIR: 'assets/db'
+  SCREENSHOT_DIR: 'assets'
 
 jobs:
   update-readme-and-visitor:
     runs-on: ubuntu-latest
     env:
-      NODE_VERSION: "20.x"
-      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: "false"
+      NODE_VERSION: '20.x'
+      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'false'
 
     steps:
       - name: 🔥 Checkout repository
@@ -38,6 +38,16 @@ jobs:
         with:
           persist-credentials: true
           fetch-depth: 0
+
+      - name: 🔍 Check if screenshot is commented in README
+        run: |
+          if grep -q "^[[:space:]]*<!--.*📸 Скріншот проекту" README.md || grep -q "^[[:space:]]*<!--.*📸 Latest Screenshot" README.md; then
+            echo "📸 Screenshot section is commented out - skipping screenshot generation"
+            echo "SCREENSHOT_SKIP=true" >> $GITHUB_ENV
+          else
+            echo "📸 Screenshot section is active - proceeding with generation"
+            echo "SCREENSHOT_SKIP=false" >> $GITHUB_ENV
+          fi
 
       - name: 🚀 Initialize workflow
         run: |
@@ -205,6 +215,10 @@ jobs:
 
       - name: 🖥 Setup Node.js and dependencies
         run: |
+          if [ "$SCREENSHOT_SKIP" = "true" ]; then
+            echo "⏭️ Skipping Node.js setup - screenshot generation disabled"
+            exit 0
+          fi
           echo "🔧 Setting up Node.js..."
           curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
           sudo apt-get install -y nodejs
@@ -237,6 +251,12 @@ jobs:
         run: |
           if [ "$SCREENSHOT_DEPENDENCIES_AVAILABLE" = "false" ]; then
             echo "❌ Screenshot dependencies not available - skipping screenshot"
+            echo "SCREENSHOT_CREATED=false" >> $GITHUB_ENV
+            exit 0
+          fi
+
+          if [ "$SCREENSHOT_SKIP" = "true" ]; then
+            echo "⏭️ Screenshot generation skipped - section is commented out"
             echo "SCREENSHOT_CREATED=false" >> $GITHUB_ENV
             exit 0
           fi
@@ -454,8 +474,8 @@ jobs:
               SCREENSHOT_SIZE=$(stat -f%z "$SCREENSHOT_DIR/screenshot.png" 2>/dev/null || stat -c%s "$SCREENSHOT_DIR/screenshot.png" 2>/dev/null || echo "0")
               if [ "$SCREENSHOT_SIZE" -gt 0 ]; then
                 echo ""
-                echo "## 📸 Latest Screenshot"
-                echo "![Project Screenshot]($SCREENSHOT_DIR/screenshot.png)"
+                echo "## 📸 Скріншот проекту"
+                echo "![Project Screenshot](./$SCREENSHOT_DIR/screenshot.png)"
               fi
             fi
             
@@ -472,12 +492,21 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
 
+          # Перевірка наявності змін
+          if git diff --cached --quiet; then
+            echo "🔄 No changes to commit"
+            exit 0
+          fi
+
           COMMIT_MSG="📊 Auto-update: visitors, likes"
           if [ "$SCREENSHOT_CREATED" = "true" ]; then
             COMMIT_MSG="$COMMIT_MSG, and screenshot"
           fi
 
-          git commit -m "$COMMIT_MSG" || exit 0
+          git commit -m "$COMMIT_MSG"
+
+          # Синхронізація з віддаленим репозиторієм перед пушем
+          git pull --rebase origin ${{ github.ref_name }} || true
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
 
           echo "📄 Triggering updates..."
